Add game delete endpoint
